2011-02-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	Add asprintf() function.
	Add documentation for vasprintf().
	Use _vcprintf() instead of vsnprintf() to get the length
	of the string, as recommended by MSDN.

2011-01-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	better perror() declaration / definition

2011-01-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	declare and define getpid() for Windows CE.

2011-01-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.h:
	define (temporary) PATH_MAX on Windows CE.
	cegcc has a bug with limits.h.

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	undefine temporary the definition of perror() on Windows CE

2010-12-18  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/libgen.c:
	fix segmentation fault in basename() and dirname()

2010-12-18  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	use _tzset instead of tzset with vc++

2010-12-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_libgen.c:
	* src/lib/evil_libgen.h:
	add dirname() function

2010-12-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	add usleep() for vc++

2010-12-10  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Vincent Richomme

	* src/lib/evil_unistd.c:
	remove warning

2010-11-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil_string.h:
	Fix doxygen documentation

2010-10-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	define offsetof for Windows CE

2010-10-22  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/dirent.h:
	* src/lib/evil_dirent.c: